# course-designs

./: .gitignore
CN/client/: CMakeLists.txt  app.cc  app.ui
DB/client/: CMakeLists.txt
DB/client/include/: http.h  item.h  util.h
DB/client/src/: home.cc  log.cc
DS/client/include/: http.h
DS/client/src/: home.cc  log.cc
DS/server/: Makefile  api.c  api.h  config.mk  main.c  mongoose.c  mongoose.h  table.c  table.h  util.h
OS/client/: CMakeLists.txt  mem.cc  mem.ui  page.cc  page.ui
